--- a/approved.html
+++ b/approved.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notification Page</title>
+    <title></title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
 <body>
 
     <header>
-        <h1>Notification Page</h1>
+        <h1></h1>
     </header>
 
     <section>
